--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-retinify",
-  "description": "small task which generates @media styles for retina images",
-  "version": "0.1.0",
+  "description": "Grunt task for generating CSS with 2x background-images",
+  "version": "0.0.2",
   "homepage": "https://github.com/cheshirsky/grunt-retinify",
   "author": "Cheshirsky",
   "files": [
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.2",
-	"grunt-contrib-jshint": "~0.7.1",
+    "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-clean": "0.5.0"
   },
   "dependencies": {
